samples/_failures_safe/1761467021_2c9baf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_65ad794e.c: In function ‘main’:
./samples/SAFE/__tmp_65ad794e.c:128:12: error: missing terminating " character
  128 |     printf("\nMatrix
      |            ^~~~~~~~~
./samples/SAFE/__tmp_65ad794e.c:128:5: error: expected expression at end of input
  128 |     printf("\nMatrix
      |     ^~~~~~
./samples/SAFE/__tmp_65ad794e.c:128:5: error: expected declaration or statement at end of input
